# card10_firmware

./: .clang  .gdbinit  .gitignore  .gitlab-ci.yml  .gitmodules  CHANGELOG.md  COPYING  Makefile  README.md  bootstrap.sh  card10-cross.ini  default.nix  flash-all.gdb  flash-bootloader.gdb  flash-both.gdb  flash-epicardium.gdb  flash-pycardium.gdb  flash.gdb  init.gdb  meson.build  meson_options.txt  requirements.txt  shell.nix
bootloader/: .gdbinit  Makefile  bootloader-display.c  bootloader-usb.c  bootloader.h  build_image.sh  build_multi_image.sh  crc16-ccitt.c  crc16.py  crc_patch.py  init.gdb  main.c  meson.build  mscmem.c  mscmem.h
epicardium/: FreeRTOSConfig.h  cdcacm.c  cdcacm.h  descriptors.h  epicardium.h  fatfs.h  main.c  meson.build  serial.c  serial.h  support.c  version-splash.h
epicardium/api/: caller.c  caller.h  common.h  control.c  dispatcher.c  dispatcher.h  genapi.py  interrupt-receiver.c  interrupt-sender.c  interrupt-sender.h
epicardium/ble/: ble.c  ble_api.h  ble_main.c  card10.c  filetransfer.c  meson.build  stack.c  svc_core.c  svc_dis.c  uart.c
epicardium/ble/app/: app_main.c
epicardium/ble/app/common/: app_db.c  app_ui.c
epicardium/fs/: filesystem_fat.c  internal.h
epicardium/l0der/: elf.h  l0der.c  l0der.h  meson.build
epicardium/modules/: MAX30003.h  bhi.c  ble.c  ble_stack_fit.c  bma400.c  bme680.c  buttons.c  config.c  config.def  config.h  dispatcher.c  display.c  fatfs.c  fatfs_fileops.c  fileops.c  filesystem.h  gpio.c  hardware.c  hw-lock.c  leds.c  lifecycle.c  light_sensor.c  log.c  max30001.c  meson.build  modules.h  panic.c  personal_state.c  pmic.c  rtc.c  serial.c  serial.h  sleep.c  stream.c  stream.h  usb.c  vibra.c  watchdog.c  ws2812.c
epicardium/usb/: cdcacm.c  cdcacm.h  descriptors.h  epc_usb.c  epc_usb.h  mass_storage.c  mass_storage.h
hw-tests/: meson.build
hw-tests/api-demo/: api.h  core1-dispatcher.c  flash.gdb  genapi.py  main.c  meson.build  test-payload.c
hw-tests/api-demo/api/: api_caller.c  api_caller.h  api_common.h  api_dispatcher.c  api_dispatcher.h
hw-tests/bmatest/: .gdbinit  build_image  init.gdb  main.c  meson.build
hw-tests/bmetest/: .gdbinit  init.gdb  main.c  meson.build
hw-tests/bootloader-update/: bootloader-9251ea6.h  bootloader-e3ae63e.h  main.c  meson.build
hw-tests/dual-core/: Heart.h  core1.c  flash.gdb  main.c  meson.build
hw-tests/ecgtest/: .gdbinit  MAX30003.h  init.gdb  main.c  meson.build
hw-tests/hello-freertos/: .gdbinit  CLI-commands.c  init.gdb  main.c  meson.build
hw-tests/hello-world/: .gdbinit  Heart.h  build_image  init.gdb  main.c  meson.build
hw-tests/imutest/: .gdbinit  init.gdb  main.c  meson.build
hw-tests/ips/: .gdbinit  init.gdb  main.c  meson.build
hw-tests/upy-minimal/: .gdbinit  init.gdb  main.c  meson.build  mpconfigport.h  mphalport.h  systick.c  uart.c
hw-tests/upy-minimal/modules/: buzzer.c  leds.c  qstr.h  qstrdefs.h  utime.c
l0dables/lib/: crt.s  hardware.c  l0dable.ld  meson.build
lib/FreeRTOS/: meson.build
lib/card10/: bosch.c  bosch.h  card10.c  card10.h  display.c  display.h  leds.c  leds.h  meson.build  mx25lba.c  oled96.c  oled96.h  pb.c  pb.h  pmic.c  pmic.h  portexpander.c  portexpander.h
lib/ff13/: fat32.mk  meson.build
lib/ff13/Source/: diskio.c  diskio.h  ff.h  ffconf.h  ffsystem.c
lib/ff13/util/: fs_util.c  fs_util.h
lib/gfx/: display.c  framebuffer.c  framebuffer.h  gfx.c  gfx.h  meson.build  textbuffer.c  textbuffer.h
lib/gfx/Fonts/: font12.c  font16.c  font20.c  font24.c  fonts.h
lib/gfx/GUI_DEV/: DEV_Config.c  DEV_Config.h  GUI_Paint.c
lib/gfx/LCD/: LCD_Driver.c  LCD_Driver.h
lib/micropython/: gen-frozen.sh  gen-modules.py  gen-mpy-cross.sh  gen-qstr.sh  gen-version.sh  meson.build  mpy-cross-wrapper.c
lib/mx25lba/: meson.build  mx25lba.c  mx25lba.h
lib/sdk/Libraries/BTLE/: btle.mk  meson.build
lib/sdk/Libraries/BTLE/documentation/: wsf_readme.md
lib/sdk/Libraries/BTLE/documentation/html/Cordio_Stack_Cordio_Profiles/: 1__abstract_8md_source.html  annotated.js  app__api_8h_source.html  app__hw_8h_source.html  app__param_8h_source.html  bstream_8h.html  (+301 more)
lib/sdk/Libraries/BTLE/wsf/include/: wsf_os.h  wsf_timer.h
lib/sdk/Libraries/Boards/card10/: board.mk  meson.build
lib/sdk/Libraries/Boards/card10/Source/: board.c
lib/sdk/Libraries/FreeRTOS/: freertos.mk  meson.build
lib/sdk/Libraries/MAX32665PeriphDriver/: Makefile  meson.build
lib/sdk/Libraries/MAX32665PeriphDriver/Include/: cipher.h  crc.h  dma.h  dvs.h  flc.h  i2c.h  lp.h  maa.h  mem_utils.h  mxc_assert.h  rpu.h  rtc.h  sdhc.h  spi17y.h  wut.h
lib/sdk/Libraries/MAX32665PeriphDriver/Source/: adc.c  cipher.c  dma.c  emcc.c  flc.c  i2c.c  icc.c  lp.c  maa.c  mxc_delay.c  mxc_lock.c  mxc_sys.c  nvic_table.c  owm.c  rtc.c  sdhc.c  simo.c  spi17y.c  spixf.c  spixfc.c  system_core1.c  tmr.c  uart.c
lib/sdk/Libraries/MAXUSB/: maxusb.mk  meson.build
lib/sdk/Libraries/MAXUSB/include/core/: usb.h  usb_event.h  usb_protocol.h
lib/sdk/Libraries/MAXUSB/include/devclass/: cdc_acm.h  hid.h  hid_raw.h
lib/sdk/Libraries/MAXUSB/include/enumerate/: enumerate.h
lib/sdk/Libraries/MAXUSB/include/util/: fifo.h
lib/sdk/Libraries/MAXUSB/src/core/: usb_event.c
lib/sdk/Libraries/MAXUSB/src/devclass/: cdc_acm.c  hid_kbd.c  hid_raw.c  msc.c
lib/sdk/Libraries/MAXUSB/src/enumerate/: enumerate.c
lib/sdk/Libraries/MAXUSB/src/util/: fifo.c
pycardium/: main.c  meson.build  mpconfigport.h  mphalport.c  mphalport.h  patch.c
pycardium/genhdr/: meson.build
pycardium/modules/: bhi160-sys.c  bma400.c  bme680.c  buttons.c  fat_file.c  fat_reader_import.c  gpio.c  interrupt.c  interrupt.h  leds.c  light_sensor.c  max30001-sys.c  os.c  os.h  personal_state.c  power.c  qstrdefs.h  sys_bme680.c  sys_display.c  sys_leds.c  utime.c  vibra.c  ws2812.c
pycardium/modules/py/: bhi160.py  bme680.py  col_defaultdict.py  col_deque.py  collections.py  color.py  contextlib.py  display.py  foo.py  functools.py  htmlcolor.py  itertools.py  ledfx.py  leds.py  max30001.py  meson.build  pov.py  pride.py  simple_menu.py  string.py  struct.py  ucontextlib.py  uuid.py
(+3527 files in other folders)
