option(
  'debug_prints',
  type: 'boolean',
  value: false,

  description: 'Whether to print debug messages on the serial console'
)

option(
  'debug_core1',
  type: 'boolean',
  value: false,

  description: 'Enable core 1 debugging interface'
)

option(
  'ble_trace',
  type: 'boolean',
  value: false,

  description: 'Whether to enable WSF TRACE prints',
)

option(
  'jailbreak_card10',
  type: 'boolean',
  value: false,

  description: 'Enable execution of .elf l0dables',
)
