module_sources = files(
  'bhi.c',
  'bme680.c',
  'buttons.c',
  'dispatcher.c',
  'display.c',
  'fileops.c',
  'gpio.c',
  'hardware.c',
  'hw-lock.c',
  'leds.c',
  'lifecycle.c',
  'light_sensor.c',
  'log.c',
  'max30001.c',
  'personal_state.c',
  'pmic.c',
  'rtc.c',
  'serial.c',
  'stream.c',
  'trng.c',
  'vibra.c',
  'watchdog.c',
  'usb.c'
)
