freertos_includes = include_directories(
  './Source/include',
  './Source/portable/GCC/ARM_CM4F',
)

freertos_sources = files(
  './Source/croutine.c',
  './Source/event_groups.c',
  './Source/list.c',
  './Source/queue.c',
  './Source/stream_buffer.c',
  './Source/tasks.c',
  './Source/timers.c',

  './Source/portable/GCC/ARM_CM4F/port.c',
  './Source/portable/MemMang/heap_2.c',
)
