python_modules = files(
  'bhi160.py',
  'color.py',
  'htmlcolor.py',
  'display.py',
  'leds.py',
  'pride.py',
  'ledfx.py',

  # MicroPython Standard-Library
  'col_defaultdict.py',
  'col_deque.py',
  'collections.py',
  'contextlib.py',
  'functools.py',
  'itertools.py',
  'string.py',
  'struct.py',
  'ucontextlib.py',
)

frozen_modules = mpy_cross.process(python_modules)
